# Python_pi_example

./: CMakeLists.txt  Sample.txt  SyringeBody.STEP  material.txt  one.py  server.py  trail_01  trail_02.py  training_01.html  two.py
templates/: training_02.html
